# dbt-course

./: .gitignore  .user.yml  README.md  dbt_project.yml  profiles.yml  pyproject.toml
models/: customers.sql  orders.sql  orders_from_unknown_customers.sql
