[tool.poetry]
name = "dbt-course"
version = "0.1.0"
description = ""
authors = ["rterluun <rterluun@ilionx.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dbt-sqlite = "^1.5.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
